Translated the code into norwegian, added http libs to build path, commented out non-working gps code.

--- a/Fix My Street/res/values/strings.xml
+++ b/Fix My Street/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 <!-- Welcome screen -->
-    <string name="app_name">Fix My Street</string>
+    <string name="app_name">FiksGataMi</string>
 
     <!-- About screen -->
- <string name="instructions">1. Click \'Take photo\', then on the camera button to take a photo.\n2. Click \'Add details\', then give the problem a name (e.g. \'Broken street light\'), and add your own name and email address. \n3. Wait for a GPS fix (it\'ll take longer if it\'s cloudy). Then, click the \'Report\' button to upload the problem to Fix My Street. \n4. Check your email. You\'ll need to click on a link to confirm the problem and add a few more details. </string>
+ <string name="instructions">1. Trykk på \'Ta bilde\', så på kamera-knappen for å ta et bilde.\n2. Trykk på \'Legg til detaljer\', gi så rapporten et navn (f.e. \'Ødelagt gatelykt\'), skriv inn ditt navn og din e-postadresse. \n3. Vent på GPS signal (det tar lengre tid hvis det er overskyet). Trykk så på \'Rapporter\' knappen for å laste opp til FiksGataMi. \n4. Sjekk innboksen din. Du må bekrefte problemet og legge til noen få detaljer til.</string>
 </resources>
