--- a/TODO.txt
+++ b/TODO.txt
@@ -3,3 +3,4 @@
 * Allow user to select point from map, do not force GPS
 * Allow user to input details before sending
 * Allow user to select category before sending.
+* Allow user to turn on GPS while it waits for GPS signal
