--- a/Fix My Street/res/values/strings.xml
+++ b/Fix My Street/res/values/strings.xml
@@ -12,7 +12,7 @@
 
 <string name="viewLicenseApp">Vis programlisens</string>
 <!--  <string name="postURL">http://fiksgatami-dev.nuug.no/import</string>  -->
-<string name="postURL">http://fiksgatami.no/import</string>
+<string name="postURL">http://www.fiksgatami.no/import</string>
 <string name="hideLicenseLib">Skjul lisens for HttpClient 4.1.1</string>
 
 <string name="hideLicenseApp">Skjul programlisens</string>
